Bug 282719 - ToolbarName is in config file but not in GUI
Summary: ToolbarName is in config file but not in GUI
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: filtering (other bugs)
Version First Reported In: 4.7
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-09-24 23:47 UTC by Wolfgang Rohdewald
Modified: 2011-09-26 07:05 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Wolfgang Rohdewald 2011-09-24 23:47:09 UTC
Version:           4.7 (using KDE 4.7.1) 
OS:                Linux

when I add/remove a filter to the toolbar, ToolbarName= is written to the config file. This is actually used for the toolbar name. But if I rename the filter, ToolbarName is not changed, and there is nothing in the config dialog letting me do that. So if I want to change the name in the toolbar I have to manually edit kmail2rc

Application version is 4.7.1 - the KDE bug system does not let me select 4.7.1

Reproducible: Always

Steps to Reproduce:
add a filter to the toolbar. Rename the filter.

Actual Results:  
the filter name in the toolbar stays the same

Expected Results:  
it should change too - or there should be a separate kmail2 GUI config option

OS: Linux (x86_64) release 3.0.0-11-generic
Compiler: gcc
Comment 1 Laurent Montel 2011-09-25 09:43:54 UTC
Will look at it soon.
Regards
Comment 2 Laurent Montel 2011-09-26 07:04:17 UTC
Git commit 88171df6fa4e40e3edd16c0e4b29801c48c51c34 by Montel Laurent.
Committed on 26/09/2011 at 09:03.
Pushed by mlaurent into branch 'master'.

Fix Bug 282719 - ToolbarName is in config file but not in GUI

FIXED-IN: 4.7.2
BUG: 282719

M  +2    -0    mailcommon/kmfilterdlg.cpp

http://commits.kde.org/kdepim/88171df6fa4e40e3edd16c0e4b29801c48c51c34
Comment 3 Laurent Montel 2011-09-26 07:05:55 UTC
Git commit 833d5e26979576748ca777f0655e9ebbddd192bf by Montel Laurent.
Committed on 26/09/2011 at 09:05.
Pushed by mlaurent into branch 'KDE/4.7'.

Fix bug Bug 282719 - ToolbarName is in config file but not in GUI

BUG: 282719

M  +2    -0    kmail/kmfilterdlg.cpp

http://commits.kde.org/kdepim/833d5e26979576748ca777f0655e9ebbddd192bf