Fix Bug 282719 - ToolbarName is in config file but not in GUI

FIXED-IN: 4.7.2
BUG: 282719